add dummy app again

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ pkg/
 *.swp
 *~
 *.directory
+
+# dummmy app
+test/dummy/db/*.sqlite3
+test/dummy/db/*.sqlite3-journal
+test/dummy/log/*.log
+test/dummy/tmp/
+test/dummy/.sass-cache
