add basic webfinger stuf (WIP)
and:
- add configure method to set some configs
- write rdoc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .bundle/
-log/*.log
 pkg/
 
 # IDE files
@@ -7,6 +6,9 @@ pkg/
 
 # coverage reports
 coverage
+
+# documentation
+rdoc
 
 # Temporary files
 .DS_Store
