--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ rdoc
 test/dummy/db/*.sqlite3
 test/dummy/db/*.sqlite3-journal
 test/dummy/log/*.log
+test/dummy/log/*.log*
 test/dummy/tmp/
 test/dummy/.sass-cache
 test/dummy/test/fixtures/*.y*ml
