use person object with attributes to generate webfinger

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -155,3 +155,10 @@ Metrics/AbcSize:
 
 Metrics/ModuleLength:
   Max: 1500
+
+Style/SingleLineMethods:
+  Exclude:
+    - "test/dummy/app/models/*"
+Style/EmptyLineBetweenDefs:
+  Exclude:
+    - "test/dummy/app/models/*"
