--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
 branches:
   only:
     - 'master'
+    - 'develop'
 
 before_install: gem install bundler
 bundler_args: "--deployment --without development --jobs=3 --retry=3"
