--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -167,3 +167,6 @@ Style/SingleLineMethods:
 Style/EmptyLineBetweenDefs:
   Exclude:
     - "test/dummy/app/models/*"
+
+Style/NumericPredicate:
+  EnforcedStyle: comparison
