Activate ruby 2.1 with rails 4.2 on travis again

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -183,3 +183,7 @@ Style/NumericPredicate:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Rails/HttpPositionalArguments:
+  Exclude:
+    - "spec/controllers/diaspora_federation/fixtures_rails4_spec.rb"
