--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -184,6 +184,10 @@ Style/NumericPredicate:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Rails/Delegate:
+  Exclude:
+    - "lib/**/*"
+
 Rails/HttpPositionalArguments:
   Exclude:
     - "spec/controllers/diaspora_federation/fixtures_rails4_spec.rb"
