Remove "try", because it is a rails feature
Also "&." is only available on ruby >= 2.3 (can be used later)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -190,6 +190,8 @@ Style/NumericPredicate:
 # only with ruby >= 2.3
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/SafeNavigation:
+  Enabled: false
 
 # only with ruby >= 2.4
 Performance/RegexpMatch:
