--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,5 @@
 AllCops:
+  TargetRubyVersion: 2.1
   Exclude:
     - "bin/**/*"
     - "test/dummy/bin/**/*"
@@ -192,15 +193,7 @@ Style/NumericPredicate:
 ### backward compatibility
 
 # only with ruby >= 2.3
-Style/FrozenStringLiteralComment:
-  Enabled: false
-Style/SafeNavigation:
-  Enabled: false
 Layout/IndentHeredoc:
-  Enabled: false
-
-# only with ruby >= 2.4
-Performance/RegexpMatch:
   Enabled: false
 
 # for rails 4 and ruby < 2.2.2
