--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: ruby
 
 rvm:
-  - 2.5.0
-  - 2.4.3
-  - 2.3.6
-  - 2.2.9
+  - 2.5.5
+  - 2.4.5
+  - 2.3.8
+  - 2.2.10
   - 2.1
 gemfile:
   - Gemfile
@@ -25,7 +25,7 @@ branches:
     - 'master'
     - 'develop'
 
-before_install: gem install bundler
+before_install: gem install bundler -v 1.17.3
 bundler_args: "--deployment --without development --jobs=3 --retry=3"
 
 script: test/scripts/travis.sh
