--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,7 +2,7 @@
 engines:
   rubocop:
     enabled: true
-    channel: rubocop-0-75
+    channel: rubocop-1-10-0
   bundler-audit:
     enabled: true
 ratings:
