--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         ruby:
+          - "3.2"
           - "3.1"
           - "3.0"
           - "2.7"
@@ -25,6 +26,8 @@ jobs:
           - "5.2"
           - "none"
         exclude:
+          - ruby: "3.2"
+            rails: "5.2"
           - ruby: "3.1"
             rails: "5.2"
           - ruby: "3.0"
